--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,9 @@
 
     <body>
 
-      <h1>Welcome to my CRM page!</h1>
+      <h1><font size="8" color="blue">Welcome to my CRM page!</font></h1>
+
+      <h2><font size="5" color="orange"> Click <a href='http://localhost:4567/contacts'> here </a> to see contacts!</font></h2>
 
     </body>
 
