--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,9 +14,9 @@
     <header>
       <h1> Bitmaker CRM </h1>
         <nav>
-          <a href='/about'>Home</a>
-          <a href='/contact_us'>Add A Contact</a>
-          <a href='/blog'>About</a>
+          <a href='/contacts'>Home</a>
+          <a href='/add_contact'>Add A Contact</a>
+          <a href='/about'>About</a>
         </nav>
     </header>
 
