part 4 with new contact form

--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -2,9 +2,9 @@
   <h3><%= @contact.first_name %> <%= @contact.last_name %></h3>
   <br>
 
-  Name: <%= @contact.first_name %> <%= @contact.last_name %></li>
+  Name: <%= @contact.first_name %> <%= @contact.last_name %>
   <br>
-  Email: <%= @contact.email %></li>
+  Email: <%= @contact.email %>
 
-
- </div>
+  Note: <%=@contact.note %>
+</div>
