--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -6,7 +6,7 @@
 
         <% @contacts.each do |contact| %>
           <p>
-            <%= contact.first_name %> <%= contact.last_name%> (<%= contact.email%>)
-            <h5><a href="/contacts/<%=contact.id%>">Edit</a> | <a href="#">Delete</a></h5>
+            <a href=/contacts/<%=contact.id%>> <%= contact.full_name%> </a>(<%= contact.email%>)
+            <h5><a href=/contacts/<%=contact.id%>/edit>Edit</a> | <a href=/contacts/<%=contact.id%>/delete>Delete</a></h5>
           </p>
         <% end %>
