final with all links

--- a/public/styles.css
+++ b/public/styles.css
@@ -119,6 +119,17 @@ div.name h3 {
   margin-top: 15px;
 }
 
+button {
+  margin-left: 47%;
+  font-size: 14px;
+}
+
+input[type="submit"] {
+    margin-left: 47%;
+    font-size: 20px;
+
+}
+
 form {
   width: 80%;
   font-size: 30px;
@@ -131,16 +142,6 @@ input[type="text"] {
   background-color: #dddddd;
 }
 
-input[type="submit"]{
-    font-size: 20px;
-    margin-left: 45%
-}
-
-input[type="submit"]:hover{
-  font-size: 20px;
-  background-color: #00c2dd;
-  colour: white;
-}
 
 footer {
   color: white;
