--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -8,3 +8,7 @@
   <br>
   Note: <%=@contact.note %>
 </div>
+<br>
+
+<a href="/contacts/<%=@contact.id%>/edit">
+  <button type="edit"  value="edit">Edit Contact</button></a>
