--- a/views/about.erb
+++ b/views/about.erb
@@ -1,1 +1,25 @@
-To do!
+<div>
+   <fieldset>
+     <legend>Rating</legend>
+
+     <label for="rating1">
+       <span>1 star</span>
+       <input type="radio" id="rating1" name="rating" value="1">
+     </label>
+
+     <label for="rating2">
+       <span>2 Stars</span>
+       <input type="radio" id="rating2" name="rating" value="2">
+     </label>
+
+     <label for="rating3">
+       <span>3 Stars</span>
+       <input type="radio" id="rating3" name="rating" value="3">
+     </label>
+
+     <label for="rating4">
+     <span>4 Stars</span>
+       <input type="radio" id="rating4" name="rating" value="4">
+     </label>
+   </fieldset>
+ </div>
