--- a/views/edit_contact.erb
+++ b/views/edit_contact.erb
@@ -27,3 +27,7 @@
 
   <input type='submit' value='Edit Contact'>
 </form>
+<br>
+
+<a href="/contacts/<%=@contact.id%>/contacts">
+  <button type="edit"  value="edit">My Contacts</button></a>
